# serializer version: 1
# name: test_all_entities[binary_sensor.sec84251907c415_connectivity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.sec84251907c415_connectivity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Connectivity',
    'platform': 'syncthru',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '08HRB8GJ3F019DD_online',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.sec84251907c415_connectivity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'connectivity',
      'friendly_name': 'SEC84251907C415 Connectivity',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.sec84251907c415_connectivity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[binary_sensor.sec84251907c415_problem-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.sec84251907c415_problem',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Problem',
    'platform': 'syncthru',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '08HRB8GJ3F019DD_problem',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.sec84251907c415_problem-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'SEC84251907C415 Problem',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.sec84251907c415_problem',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
